--- a/app/blueprints/user/templates/user/signup.html
+++ b/app/blueprints/user/templates/user/signup.html
@@ -4,7 +4,7 @@
 {% block title %}Sign Up - {{ 'site_name'|site_name_filter }}{% endblock %}
 
 {% block body %}
-  <head>
+<head>
     <!-- Tailwind CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tailwindcss/ui@latest/dist/tailwind-ui.min.css">
 
@@ -14,21 +14,20 @@
   <div class="row">
     <div class="block-content" style="width:50%;min-width:300px;max-width:350px;margin:0 auto;
     border:1px solid #c5c5c5;border-radius:4px; padding:20px;float:none;margin-top:50px; background-color:#fff;">
-    {% call f.form_tag('user.signup') %}
-{#        <legend>Sign up for a free 14-day trial</legend>#}
+      {% call f.form_tag('user.signup') %}
         <legend>Sign up for free</legend>
 
-        {% call f.form_group(form.name, css_class='sm-margin-bottom',
-                             autofocus='autofocus',
-                             placeholder='Name') %}
-        {% endcall %}
-
+      {% call f.form_group(form.name, css_class='sm-margin-bottom',
+                         autofocus='autofocus',
+                         placeholder='Name') %}
         {% call f.form_group(form.email, css_class='sm-margin-bottom',
+                             autofocus='autofocus',
                              placeholder='Email address') %}
         {% endcall %}
 
-        {% call f.form_group(form.password, css_class='sm-margin-bottom',
-                placeholder='Password') %}
+        {% call f.form_group(form.password, css_class='sm-margin-bottom') %}
+        {% endcall %}
+
         {% endcall %}
 
         <div class="row">
@@ -50,5 +49,4 @@
     <small>By signing up you agree to our <a href="{{ url_for('page.privacy') }}">Privacy Policy</a> and <a href="{{ url_for('page.terms') }}">Terms of Service</a></small>
     </div>
   </div>
-
 {% endblock %}
