--- a/app/blueprints/user/templates/user/signup.html
+++ b/app/blueprints/user/templates/user/signup.html
@@ -27,7 +27,7 @@
         {% call f.form_group(form.password, css_class='sm-margin-bottom') %}
         {% endcall %}
 
-        {% endcall %}
+{#        {% endcall %}#}
 
         <div class="row">
           <div class="col-md-6" style="float:none;margin:0 auto;">
