--- a/app/blueprints/user/templates/user/signup.html
+++ b/app/blueprints/user/templates/user/signup.html
@@ -32,7 +32,7 @@
         <div class="row">
           <div class="col-md-6" style="float:none;margin:0 auto;">
             <button type="submit" class="btn btn-block bg-indigo-500 text-white-800">
-                <span style="color:white">Finish</span>
+                <span style="color:white">Complete</span>
             </button>
           </div>
         </div>
