--- a/app/blueprints/user/templates/user/signup.html
+++ b/app/blueprints/user/templates/user/signup.html
@@ -21,6 +21,8 @@
 {#                         autofocus='autofocus',#}
 {#                         placeholder='Name') %}#}
         {% call f.form_group(form.url, css_class='sm-margin-bottom') %}
+        {% endcall %}
+
         {% call f.form_group(form.email, css_class='sm-margin-bottom', autofocus='autofocus') %}
         {% endcall %}
 
