--- a/app/blueprints/user/templates/user/signup.html
+++ b/app/blueprints/user/templates/user/signup.html
@@ -23,10 +23,10 @@
         {% call f.form_group(form.url, css_class='sm-margin-bottom') %}
         {% endcall %}
 
-        {% call f.form_group(form.email, css_class='sm-margin-bottom', autofocus='autofocus') %}
+        {% call f.form_group(form.email, css_class='sm-margin-bottom') %}
         {% endcall %}
 
-        {% call f.form_group(form.password, css_class='sm-margin-bottom') %}
+        {% call f.form_group(form.password, css_class='sm-margin-bottom', autofocus='autofocus') %}
         {% endcall %}
 
 {#        {% endcall %}#}
