changed recurrify to sync project

--- a/app/blueprints/user/templates/user/signup.html
+++ b/app/blueprints/user/templates/user/signup.html
@@ -15,7 +15,8 @@
     <div class="block-content" style="width:50%;min-width:300px;max-width:350px;margin:0 auto;
     border:1px solid #c5c5c5;border-radius:4px; padding:20px;float:none;margin-top:50px; background-color:#fff;">
       {% call f.form_tag('user.signup') %}
-        <legend>Finish setting up your account</legend>
+        <legend class="text-center">Thanks for installing Recurrify!</legend>
+        <p>Please enter the email you want to use with this account and a password to finish setting up your account.</p>
 
 {#      {% call f.form_group(form.name, css_class='sm-margin-bottom',#}
 {#                         autofocus='autofocus',#}
