--- a/app/blueprints/user/templates/user/dashboard.html
+++ b/app/blueprints/user/templates/user/dashboard.html
@@ -104,10 +104,10 @@
 
                         <h1 class="mb-5 text-xl font-w700 text-gray-900">Products</h1>
                         {% if products|length > 0 %}
-                        <div class="flex flex-col">
+                        <div class="flex flex-col mb-5">
                           <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
                             <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
-                              <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
+                              <div class="shadow overflow-hidden border-gray-200 sm:rounded-lg">
                                 <table class="min-w-full divide-y divide-gray-200">
                                   <thead>
                                     <tr>
@@ -186,7 +186,7 @@
                                       {% endif %}
                                       </td>
                                       <td class="px-6 py-4 whitespace-no-wrap text-right text-sm leading-5 font-medium">
-                                        <a href="#" class="text-indigo-600 hover:text-indigo-900">
+                                        <a href="{{ url_for('user.product', product_id=product['id']) }}" class="text-indigo-600 hover:text-indigo-900">
                                             <svg class="h-7 w-7" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
                                                 <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd" />
                                             </svg>
@@ -196,78 +196,8 @@
                                     {% endfor %}
                                   </tbody>
                                 </table>
+                                {% include '/user/includes/pagination.html' ignore missing %}
                               </div>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="bg-white px-4 py-3 flex items-center justify-between border-t border-gray-200 sm:px-6">
-                          <div class="flex-1 flex justify-between sm:hidden">
-                            <a href="#" class="relative inline-flex items-center px-4 py-2 border border-gray-300 text-sm leading-5 font-medium rounded-md text-gray-700 bg-white hover:text-gray-500 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 active:bg-gray-100 active:text-gray-700 transition ease-in-out duration-150">
-                              Previous
-                            </a>
-                            <a href="#" class="ml-3 relative inline-flex items-center px-4 py-2 border border-gray-300 text-sm leading-5 font-medium rounded-md text-gray-700 bg-white hover:text-gray-500 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 active:bg-gray-100 active:text-gray-700 transition ease-in-out duration-150">
-                              Next
-                            </a>
-                          </div>
-                          <div class="hidden sm:flex-1 sm:flex sm:items-center sm:justify-between">
-                            <div>
-                              <p class="text-sm leading-5 text-gray-700">
-                                Showing
-                                <span class="font-medium">{{ start }}</span>
-                                to
-                                <span class="font-medium">{{ finish }}</span>
-                                of
-                                <span class="font-medium">{{ total }}</span>
-                                results
-                              </p>
-                            </div>
-                            <div>
-                              <nav class="relative z-0 inline-flex shadow-sm">
-                                <a href="#" class="relative inline-flex items-center px-2 py-2 rounded-l-md border border-gray-300 bg-white text-sm leading-5 font-medium text-gray-500 hover:text-gray-400 focus:z-10 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:bg-gray-100 active:text-gray-500 transition ease-in-out duration-150" aria-label="Previous">
-                                  <!-- Heroicon name: chevron-left -->
-                                  <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
-                                    <path fill-rule="evenodd" d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z" clip-rule="evenodd" />
-                                  </svg>
-                                </a>
-                                {% if total_pages > 7 %}
-                                    <a href="#" class="-ml-px relative inline-flex items-center px-4 py-2 border border-gray-300 bg-white text-sm leading-5 font-medium text-gray-700 hover:text-gray-500 focus:z-10 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:bg-gray-100 active:text-gray-700 transition ease-in-out duration-150">
-                                      {{ page }}
-                                    </a>
-                                    <a href="#" class="-ml-px relative inline-flex items-center px-4 py-2 border border-gray-300 bg-white text-sm leading-5 font-medium text-gray-700 hover:text-gray-500 focus:z-10 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:bg-gray-100 active:text-gray-700 transition ease-in-out duration-150">
-                                      {{ page }}
-                                    </a>
-                                    <a href="#" class="-ml-px relative inline-flex items-center px-4 py-2 border border-gray-300 bg-white text-sm leading-5 font-medium text-gray-700 hover:text-gray-500 focus:z-10 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:bg-gray-100 active:text-gray-700 transition ease-in-out duration-150">
-                                      {{ page }}
-                                    </a>
-                                    <a href="#" class="-ml-px relative inline-flex items-center px-4 py-2 border border-gray-300 bg-white text-sm leading-5 font-medium text-gray-700 hover:text-gray-500 focus:z-10 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:bg-gray-100 active:text-gray-700 transition ease-in-out duration-150">
-                                      {{ page }}
-                                    </a>
-                                    <a href="#" class="-ml-px relative inline-flex items-center px-4 py-2 border border-gray-300 bg-white text-sm leading-5 font-medium text-gray-700 hover:text-gray-500 focus:z-10 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:bg-gray-100 active:text-gray-700 transition ease-in-out duration-150">
-                                      {{ page }}
-                                    </a>
-                                    <a href="#" class="-ml-px relative inline-flex items-center px-4 py-2 border border-gray-300 bg-white text-sm leading-5 font-medium text-gray-700 hover:text-gray-500 focus:z-10 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:bg-gray-100 active:text-gray-700 transition ease-in-out duration-150">
-                                      {{ page }}
-                                    </a>
-                                    <span class="-ml-px relative inline-flex items-center px-4 py-2 border border-gray-300 bg-white text-sm leading-5 font-medium text-gray-700">
-                                      ...
-                                    </span>
-                                    <a href="#" class="-ml-px relative inline-flex items-center px-4 py-2 border border-gray-300 bg-white text-sm leading-5 font-medium text-gray-700 hover:text-gray-500 focus:z-10 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:bg-gray-100 active:text-gray-700 transition ease-in-out duration-150">
-                                      {{ total_pages }}
-                                    </a>
-                                {% else %}
-                                    {% for x in range(total_pages) %}
-                                        <a href="#" class="-ml-px relative inline-flex items-center px-4 py-2 border border-gray-300 bg-white text-sm leading-5 font-medium text-gray-700 hover:text-gray-500 focus:z-10 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:bg-gray-100 active:text-gray-700 transition ease-in-out duration-150">
-                                            {{ x + 1 }}
-                                        </a>
-                                    {% endfor %}
-                                {% endif %}
-                                <a href="#" class="-ml-px relative inline-flex items-center px-2 py-2 rounded-r-md border border-gray-300 bg-white text-sm leading-5 font-medium text-gray-500 hover:text-gray-400 focus:z-10 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:bg-gray-100 active:text-gray-500 transition ease-in-out duration-150" aria-label="Next">
-                                  <!-- Heroicon name: chevron-right -->
-                                  <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
-                                    <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd" />
-                                  </svg>
-                                </a>
-                              </nav>
                             </div>
                           </div>
                         </div>
@@ -284,16 +214,6 @@
                       </div>
                   </main>
             </div>
-
-{#        {% if (domain and domain.name != 'demo' and domain.is_private) and (not current_user.is_authenticated or not admin) %}#}
-{#            {% include '/user/includes/private_overlay.html' ignore missing %}#}
-{#            <script>#}
-{#                document.getElementById('search_field').readOnly = true;#}
-{#            </script>#}
-{#        {% endif %}#}
-
-
-
         <!-- jQuery -->
         <script src="{{ url_for('static', filename='oneui/assets/js/core/jquery.min.js') }}"></script>
 
@@ -345,7 +265,6 @@
 
             function SearchProducts(e){
                 var input = '';
-
                 input += e.value;
 
                 var product_rows = document.getElementsByClassName('product-row');
