--- a/app/blueprints/user/templates/user/start.html
+++ b/app/blueprints/user/templates/user/start.html
@@ -89,14 +89,14 @@
                                           <input id="source_radio" checked name="store_type" value="source" type="radio" class="form-radio h-4 w-4 text-indigo-600 transition duration-150 ease-in-out" style="cursor:pointer" onchange="EnableSourceURL(false)">
                                           <label for="source_radio" class="ml-3">
                                             <span class="block text-sm leading-5 font-medium text-gray-700">Source store</span>
-                                            <span class="block text-sm leading-5 font-medium text-gray-500">This is the main store that allows other stores to sell its products.</span>
+                                            <span class="block text-sm leading-5 font-medium text-gray-500">You are the main store that allows other stores to sell its products.</span>
                                           </label>
                                         </div>
                                         <div class="mt-4 flex items-center">
                                           <input id="destination_radio" name="store_type" type="radio" value="destination" class="form-radio h-4 w-4 text-indigo-600 transition duration-150 ease-in-out" style="cursor:pointer" onchange="EnableSourceURL(true)">
                                           <label for="destination_radio" class="ml-3">
                                             <span class="block text-sm leading-5 font-medium text-gray-700">Destination store</span>
-                                            <span class="block text-sm leading-5 font-medium text-gray-500">This is a store that sells another store's products.</span>
+                                            <span class="block text-sm leading-5 font-medium text-gray-500">You are a store that sells another store's products.</span>
                                           </label>
                                         </div>
                                     </div>
