--- a/app/blueprints/user/templates/user/settings.html
+++ b/app/blueprints/user/templates/user/settings.html
@@ -115,26 +115,31 @@
                                         {{ current_user.email }}
                                     </dd>
                                 </div>
-                                {% if shops and shops|length > 0 %}
-                                    <div class="mt-8 sm:mt-0 sm:grid sm:grid-cols-3 sm:gap-4 sm:border-t sm:border-gray-200 sm:px-6 sm:py-5">
-                                        <dt class="text-sm leading-5 font-medium text-gray-500">
-                                            Stores
-                                        </dt>
-                                        <dd class="mt-1 text-sm leading-5 text-gray-900 sm:mt-0 sm:col-span-2">
-                                            {% for shop in shops %}
-                                                {{ shop.shop }}
-                                            {% endfor %}
-                                        </dd>
-                                    </div>
-                                    <div class="sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6 sm:py-5">
-                                        <dt class="text-sm leading-5 font-medium text-gray-500">
-                                            Number of subscribers
-                                        </dt>
-                                        <dd class="mt-1 text-sm leading-5 text-gray-900 sm:mt-0 sm:col-span-2">
-                                            {{ members }}
-                                        </dd>
-                                    </div>
-                                {% endif %}
+                                <div class="mt-8 sm:mt-0 sm:grid sm:grid-cols-3 sm:gap-4 sm:border-t sm:border-gray-200 sm:px-6 sm:py-5">
+                                    <dt class="text-sm leading-5 font-medium text-gray-500">
+                                        Source store
+                                    </dt>
+                                    <dd class="mt-1 text-sm leading-5 text-gray-900 sm:mt-0 sm:col-span-2">
+                                        {{ shop.shop }}
+                                    </dd>
+                                </div>
+                                <div class="mt-8 sm:mt-0 sm:grid sm:grid-cols-3 sm:gap-4 sm:border-t sm:border-gray-200 sm:px-6 sm:py-5">
+                                    <dt class="text-sm leading-5 font-medium text-gray-500">
+                                        Destination stores
+                                    </dt>
+                                    <dd class="mt-1 text-sm leading-5 text-gray-900 sm:mt-0 sm:col-span-2">
+                                    {% if destinations and destinations|length > 0 %}
+                                        {% for shop in destinations %}
+                                            {{ shop.shop }}
+                                        {% endfor %}
+                                    {% else %}
+                                        <a href="{{ url_for('user.sync') }}"
+                                             class="inline-flex items-center px-4 py-2 border border-gray-300 text-sm leading-5 font-medium rounded-md text-gray-700 bg-white hover:text-gray-500 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:text-gray-800 active:bg-gray-50 transition ease-in-out duration-150">
+                                            Sync a store
+                                        </a>
+                                    {% endif %}
+                                    </dd>
+                                </div>
                                 <div class="mt-8 sm:mt-0 sm:grid sm:grid-cols-3 sm:gap-4 sm:border-t sm:border-gray-200 sm:px-6 sm:py-5">
                                     <dt class="text-sm leading-5 font-medium text-gray-500">
                                         Username
@@ -170,14 +175,6 @@
                                             Update email and password
                                           </a>
                                       </span>
-                                    </dd>
-                                </div>
-                                <div class="mt-8 sm:mt-0 sm:grid sm:grid-cols-3 sm:gap-4 sm:border-t sm:border-gray-200 sm:px-6 sm:py-5">
-                                    <dt class="text-sm leading-5 font-medium text-gray-500">
-                                        Membership type
-                                    </dt>
-                                    <dd class="mt-1 text-sm leading-5 text-gray-900 sm:mt-0 sm:col-span-2">
-                                        {{ current_user.role|title }}
                                     </dd>
                                 </div>
                                 {% if true %}
