--- a/app/blueprints/user/templates/user/signup.html
+++ b/app/blueprints/user/templates/user/signup.html
@@ -15,13 +15,9 @@
         <div class="block-content" style="width:50%;min-width:300px;max-width:350px;margin:0 auto;
     border:1px solid #c5c5c5;border-radius:4px; padding:20px;float:none;margin-top:50px; background-color:#fff;">
             {% call f.form_tag('user.signup') %}
-                <legend class="text-center">Thanks for installing Recurrify!</legend>
+                <legend class="text-center">Thanks for installing {{ 'site'|site_name_filter|title }}!</legend>
                 <p>Please enter the email you want to use with this account and a password to finish setting up your
                     account.</p>
-
-                {#      {% call f.form_group(form.name, css_class='sm-margin-bottom',#}
-                {#                         autofocus='autofocus',#}
-                {#                         placeholder='Name') %}#}
                 {% call f.form_group(form.url, css_class='sm-margin-bottom') %}
                 {% endcall %}
 
@@ -30,9 +26,6 @@
 
                 {% call f.form_group(form.password, css_class='sm-margin-bottom', autofocus='autofocus') %}
                 {% endcall %}
-
-                {#        {% endcall %}#}
-
                 <div class="row">
                     <div class="col-md-6" style="float:none;margin:0 auto;">
                         <button type="submit" class="btn btn-block bg-indigo-500 text-white-800">
@@ -41,13 +34,6 @@
                     </div>
                 </div>
                 <div class="row"><br/></div>
-                {#        <div class="row">#}
-                {#          <div class="col-md-8" style="width:100%;">#}
-                {#            <div style="height:100%;border:none;">#}
-                {#                <span style="font-size:16px;">Already registered? &nbsp;<a href="{{ url_for('user.login') }}"><span class="text-indigo-800"><u>Login</u></span></a></span>#}
-                {#             </div>#}
-                {#          </div>#}
-                {#        </div>#}
             {% endcall %}<br/>
             <small>By signing up you agree to our <a href="{{ url_for('page.privacy') }}">Privacy Policy</a> and <a
                     href="{{ url_for('page.terms') }}">Terms of Service</a></small>
