--- a/app/blueprints/user/templates/user/stores.html
+++ b/app/blueprints/user/templates/user/stores.html
@@ -67,65 +67,91 @@
 
             <main class="flex-1 relative z-0 overflow-y-auto pb-6 focus:outline-none" tabindex="0">
                 {{ flash.render() }}
-                <div class="max-w-5xl mx-auto px-4 sm:px-6 md:px-8 pt-10">
-                    <div class="text-center full">
-                        <span class="text-lg mb-1 mt-10 text-gray-700" style="font-size: 24px;">Your store type: {% if store.source %}Source{% endif %}</span><br/>
-                    </div>
+                <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8 pt-10">
+                    <div class="grid md:grid-cols-2 sm:gap-4 lg:gap-6 sm:grid-cols-1 lg:grid-cols-2 mb-5">
+                        <div class="col-span-1">
+                            <div class="text-center full">
+                                <span class="text-lg mb-1 mt-10 text-gray-700" style="font-size: 24px;">Your source stores</span><br/>
+                            </div>
 
-                    <fieldset class="pt-8 pb-8" style="width:500px;margin:0 auto;float:none;">
-                        <ul class="space-y-4" role="radiogroup" aria-labelledby="radiogroup-label">
-                            <a href="{{ url_for('user.dashboard') }}" id="hobby" tabindex="0" role="radio" aria-checked="true"
-                                class="group relative bg-white rounded-lg shadow-sm cursor-pointer focus:outline-none focus:ring-1 focus:ring-offset-2 focus:ring-indigo-500">
-                                <div class="rounded-lg border border-gray-300 bg-white px-6 py-4 hover:border-gray-400 sm:flex sm:justify-between">
-                                    <div class="flex items-center">
-                                        <div class="text-sm">
-                                            <p class="font-medium text-gray-900">
-                                                {{ store.url }}
-                                            </p>
-                                            <div class="text-gray-500">
-                                                <p class="sm:inline">x of {{ product_count }} products synced</p><br/>
+                            <fieldset class="pt-8" style="width:500px;margin:0 auto;float:none;">
+                                <ul class="space-y-4" role="radiogroup" aria-labelledby="radiogroup-label">
+                                    {% for shop in sources %}
+                                        <li id="{{ shop.shop_id }}" tabindex="0" role="radio" aria-checked="true"
+                                            class="group relative bg-white rounded-lg shadow-sm cursor-pointer focus:outline-none focus:ring-1 focus:ring-offset-2 focus:ring-indigo-500"
+                                            >
+                                            <div class="rounded-lg border border-gray-300 bg-white px-6 py-4 hover:border-gray-400 sm:flex sm:justify-between">
+                                                <div class="flex items-center">
+                                                    <div class="text-sm">
+                                                        <p class="font-medium text-gray-900">
+                                                            {{ shop.url }}
+                                                        </p>
+                                                    </div>
+                                                </div>
                                             </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </a>
-                        </ul>
-                    </fieldset>
-                    <!--
-                      Tailwind UI components require Tailwind CSS v1.8 and the @tailwindcss/ui plugin.
-                      Read the documentation to get started: https://tailwindui.com/documentation
-                    -->
+                                            <div class="border-transparent absolute inset-0 rounded-lg border-2 pointer-events-none"
+                                                aria-hidden="true"></div>
+                                        </li>
+                                    {% endfor %}
+                                </ul>
+                            </fieldset>
+                        </div>
 
-                    <div class="text-center full">
-                        <span class="text-lg mb-1 mt-10 text-gray-700"
-                              style="font-size: 24px;">Your destination stores</span><br/>
-                    </div>
+                        <div class="col-span-1">
+                            <div class="text-center full">
+                                <span class="text-lg mb-1 mt-10 text-gray-700" style="font-size: 24px;">Your destination stores</span><br/>
+                            </div>
 
-                    <fieldset class="pt-8" style="width:500px;margin:0 auto;float:none;">
-                        <ul class="space-y-4" role="radiogroup" aria-labelledby="radiogroup-label">
-                            {% for sync in destinations %}
-                                <li id="hobby" tabindex="0" role="radio" aria-checked="true"
-                                    class="group relative bg-white rounded-lg shadow-sm cursor-pointer focus:outline-none focus:ring-1 focus:ring-offset-2 focus:ring-indigo-500"
-                                    onclick="SwitchPlan(this);">
-                                <div class="rounded-lg border border-gray-300 bg-white px-6 py-4 hover:border-gray-400 sm:flex sm:justify-between">
-                                    <div class="flex items-center">
-                                        <div class="text-sm">
-                                            <p class="font-medium text-gray-900">
-                                                {{ sync.destination_url}} {% if not sync.active %}- Pending activation{% else %}- Active{% endif %}
-                                            </p>
-                                            <div class="text-gray-500">
-                                                {% set plan = plans|selectattr('id', 'equalto', sync.plan_id ) | list | first %}
-                                                <p class="sm:inline">{{ sync.plan|title }} plan - ${{ plan.price }}/mo</p><br/>
-                                                <p class="sm:inline">x/{% if plan.limit > 5000 %}Unlimited{% else %}{{ plan.limit }}{% endif %} product syncs used</p><br/>
+                            <fieldset class="pt-8" style="width:500px;margin:0 auto;float:none;">
+                                <ul class="space-y-4" role="radiogroup" aria-labelledby="radiogroup-label">
+                                    {% for sync in destinations %}
+                                        <li id="{{ sync.destination_id }}" tabindex="0" role="radio" aria-checked="true"
+                                            class="group relative bg-white rounded-lg shadow-sm cursor-pointer focus:outline-none focus:ring-1 focus:ring-offset-2 focus:ring-indigo-500"
+                                            >
+                                            <div class="rounded-lg border border-gray-300 bg-white px-6 py-4 hover:border-gray-400 sm:flex sm:justify-between">
+                                                <div class="flex items-center w-full">
+                                                    <div class="grid grid-cols-4 gap-5">
+                                                        <div class="col-span-3">
+                                                            <div class="text-lg">
+                                                                <p class="text-gray-900">
+                                                                    {{ sync.destination_url | title }} -
+                                                                    <span class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-medium {% if not sync.active %}bg-gray-100 text-gray-800{% else %}bg-green-100 text-green-800{% endif %}">
+                                                                        {% if not sync.active %}Inactive{% else %}Active{% endif %}
+                                                                    </span>
+                                                                </p>
+                                                            </div>
+                                                            <div class="text-gray-500 text-sm">
+                                                                {% set plan = plans|selectattr('id', 'equalto', sync.plan_id ) | list | first %}
+                                                                <p class="sm:inline">{{ sync.plan|title }} plan - ${{ plan.price }}/mo</p><br/>
+                                                                <p class="sm:inline">x/{% if plan.limit > 5000 %}Unlimited{% else %}{{ plan.limit }}{% endif %} product syncs used</p><br/>
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-span-1 mt-3">
+                                                            <span class="ml-3 text-center inline-flex rounded-md shadow-sm">
+                                                                {% if sync.active %}
+                                                                    <button type="button"
+                                                                            class="inline-flex justify-center py-2 px-4 border border-transparent text-sm leading-5 font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 transition duration-150 ease-in-out"
+                                                                            onclick="">
+                                                                      Sync <i class="fa fa-refresh ml-3 pt-1"></i>
+                                                                    </button>
+                                                                {% else %}
+                                                                    <button type="button"
+                                                                        class="inline-flex justify-center py-2 px-4 border border-transparent text-sm leading-5 font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 transition duration-150 ease-in-out"
+                                                                        onclick="ActivateSync('{{ sync.sync_id }}', '{{ sync.destination_id }}', this);">
+                                                                        Activate
+                                                                    </button>
+                                                                {% endif %}
+                                                            </span>
+                                                        </div>
+                                                    </div>
+                                                </div>
                                             </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="border-{% if sync.active %}green{% endif %}-500 absolute inset-0 rounded-lg border-2 pointer-events-none"
-                                         aria-hidden="true"></div>
-                            {% endfor %}
-                        </ul>
-                    </fieldset>
+                                        </li>
+                                    {% endfor %}
+                                </ul>
+                            </fieldset>
+                        </div>
+                    </div>
                 </div>
             </main>
         </div>
@@ -174,6 +200,27 @@
         }
 
         document.getElementById(val.id + '_border').classList.add('border-indigo-500');
+    }
+
+    function ActivateSync(sync_id, shop_id, el){
+        var url = "{{ url_for('user.activate_sync') }}";
+        $.ajax({
+            url: url,
+            type: 'POST',
+            data: {'sync_id': sync_id, 'shop_id': shop_id},
+            success: function (response) {
+                if ('success' in response){
+                    el.innerText = "Activated";
+                    el.classList.remove('bg-indigo-600');
+                    el.classList.remove('hover:bg-indigo-500');
+                    el.classList.add('hover:bg-green-500');
+                    el.classList.add('bg-green-600');
+                    el.removeAttribute("onclick");
+                }
+            },
+            error: function (xhr) {
+            }
+        });
     }
 
 
